[package]
name = "sel4-sys"
version = "0.0.1"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "Rust interface to the seL4 kernel"
documentation = "https://cmr.github.io/hprof"
repository = "https://github.com/cmr/hprof"
readme = "README.md"
license = "MIT/Apache-2.0"
build = "build.rs"

[features]
unstable = []

[lib]
path = "lib.rs"
