# Copyright (c) 2015 The Robigalia Project Developers
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.
[package]
name = "sel4-sys"
version = "0.0.1"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "Rust interface to the seL4 kernel"
documentation = "https://cmr.github.io/hprof"
repository = "https://github.com/cmr/hprof"
readme = "README.md"
license = "MIT/Apache-2.0"
build = "build.rs"

[features]
unstable = []
SEL4_DEBUG = []
SEL4_DANGEROUS_CODE_INJECTION = []
SEL4_CONFIG_BENCHMARK = []

[lib]
path = "lib.rs"
